@@ -1,3 +1,7 @@
+2008-03-06  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* configure, JavaBinding.addin.xml: Bump version to 1.0. Yay!
+
 2008-02-24  Enver ALTIN  <ealtin@gmail.com>
  
 	* po/tr.po: Updated Turkish translation.
